// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: errors 1`] = `Array []`;

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: errors 2`] = `Array []`;

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"other-static/js/worker.bundle.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: module 2`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"other-static/js/worker.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: result 2`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: warnings 1`] = `Array []`;

exports[`"publicPath" option should work and respect "filename" and "chunkFilename" option values: warnings 2`] = `Array []`;

exports[`"publicPath" option should work and respect the "output.publicPath" option default value: errors 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "output.publicPath" option default value: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and respect the "output.publicPath" option default value: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and respect the "output.publicPath" option default value: warnings 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("function"): errors 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("function"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("function"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("function"): warnings 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("string"): errors 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("string"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("string"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and respect the "output.publicPath" option value ("string"): warnings 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "publicPath" option ("function"): errors 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "publicPath" option ("function"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and respect the "publicPath" option ("function"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and respect the "publicPath" option ("function"): warnings 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "publicPath" option ("string"): errors 1`] = `Array []`;

exports[`"publicPath" option should work and respect the "publicPath" option ("string"): module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and respect the "publicPath" option ("string"): result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and respect the "publicPath" option ("string"): warnings 1`] = `Array []`;

exports[`"publicPath" option should work and use "__webpack_public_path__" by default: errors 1`] = `Array []`;

exports[`"publicPath" option should work and use "__webpack_public_path__" by default: module 1`] = `
"export default function Worker_fn() {
  return new Worker(__webpack_public_path__ + \\"test.worker.js\\");
}
"
`;

exports[`"publicPath" option should work and use "__webpack_public_path__" by default: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"publicPath" option should work and use "__webpack_public_path__" by default: warnings 1`] = `Array []`;
